--- a/taygunBulmus_CV_EN.tex
+++ b/taygunBulmus_CV_EN.tex
@@ -289,9 +289,6 @@ CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory, Astrophysi
 %\textbf{Supernova Neutrinos and Recent Researches}, METU, Turkey
 %\hfill {Feb 2015}
 
-\textbf{Neutrino Oscillation in Astrophysics}, Ozyegin Uni., Turkey
-\hfill{Apr 2014}
-
 \section{Publications}
 T. Bulmus and Y. Pehlivan, (2017)  [DOI:\href{http://dx.doi.org/10.7566/JPSCP.14.020709}{10.7566/JPSCP.14.020709}].
 
@@ -318,8 +315,8 @@ T. Bulmus and Y. Pehlivan, (2017)  [DOI:\href{http://dx.doi.org/10.7566/JPSCP.14
 \textbf{Nuclei In the Cosmos NIC-XIV}{\small,Japan}
 \hfill{Jun 2016}
 
-\textbf{International Workshop on $ \nu $ Physics and Astrophysics}{\small, Turkey }
-\hfill{Mar 2015}
+%\textbf{International Workshop on $ \nu $ Physics and Astrophysics}{\small, Turkey }
+%\hfill{Mar 2015}
 
 \section{Affiliations}
 \textbf{\href{https://www.eps.org/}{Member of European Physics Society}} (EPS)\\
@@ -329,7 +326,8 @@ T. Bulmus and Y. Pehlivan, (2017)  [DOI:\href{http://dx.doi.org/10.7566/JPSCP.14
 \section{Interests}
 Rock Climbing, Mountaineering, Swimming, Blues and Funk Music, Home Servers
 
-
+\section{Language}
+Turkish (Native), English (Fluent)
 
 %\section{References}
 
