--- a/taygunBulmus_CV_EN.tex
+++ b/taygunBulmus_CV_EN.tex
@@ -230,24 +230,24 @@
 
 
 \begin{document}
-\makeheading{Taygun Bulmus}
+\makeheading{Taygun Bulmu\c{s}}
 
 \section{Information}
 \newlength{\rcollength}\setlength{\rcollength}{1.95in}%
 \href{https://github.com/bulmust}{\textbf{Github:} github.com/bulmust}\hfill{\textbf{\email{bulmust@gmail.com}}}\\
-Kadıkoy, Istanbul, Turkey 
+\textbf{No:} (+90) 535 416 1978\hfill{Kadıköy, İstanbul, Turkey} 
 
 \section{Experience}
-\textbf{Research Assistant}{\footnotesize , \href{http://www.msgsu.edu.tr/}{MSGSU Physics Department}, Turkey}
+\textbf{Research Assistant}{\footnotesize , \href{http://www.msgsu.edu.tr/}{MSGSÜ Physics Department}, Turkey}
 \hfill{May 2017 - Present}
 \vspace{0.1cm} \\
 \textbf{Research Visitor}{\footnotesize, \href{https://www.gsi.de/en/}{GSI Theory Division}, Germany} \hfill{Oct 2018 - Apr 2019}
 %Helmholtzzentrum f\"ur Schwerionenforschung
 \vspace{0.1cm} \\
-\textbf{Teaching Assistant}{\footnotesize, \href{https://msgsufizik.net/}{MSGSU Physics Department}, Turkey}
+\textbf{Teaching Assistant}{\footnotesize, \href{https://msgsufizik.net/}{MSGSÜ Physics Department}, Turkey}
 \hfill{Sep 2013 - Jun 2014}
 \vspace{0.1cm} \\
-\textbf{Teacher}{\footnotesize, Nisantasi Private Physics Teaching Institution, Turkey}
+\textbf{Teacher}{\footnotesize, Nişantaşı Private Physics Teaching Institution, Turkey}
 \hfill{Sep 2011 - Jun 2012}
 \vspace{0.1cm} \\
 \textbf{Teaching Assistant}{\footnotesize, \href{http://www.fizik.itu.edu.tr/eng/}{ITU Physics Eng Department}, Turkey}
@@ -262,9 +262,9 @@ Python, Git, C\texttt{++}, SSH, SLURM, \Matlab, \LaTeX, Bash, Markdown
 CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory, Astrophysics, Solid State Physics
 
 \section{Education}
-\textbf{Doctor of Philosophy, Physics}{, \small \href{http://www.msgsu.edu.tr/}{MSGSU}, Turkey}
+\textbf{Doctor of Philosophy, Physics}{, \small \href{http://www.msgsu.edu.tr/}{MSGSÜ}, Turkey}
 \hfill{Jun 2022} \\
-\textbf{Master Of Science, Physics}{, \small \href{http://www.msgsu.edu.tr/}{MSGSU}, Turkey}
+\textbf{Master Of Science, Physics}{, \small \href{http://www.msgsu.edu.tr/}{MSGSÜ}, Turkey}
 \hfill{Jun 2015} \\
 \textbf{Bachelor of Science, Physics Engineering}{, \small \href{https://www.itu.edu.tr/}{ITU}, Turkey}
 \hfill{Jun 2012}
@@ -273,16 +273,16 @@ CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory, Astrophysi
 \textbf{GSI, Get Involved} \hfill{Apr 2020 - Canceled}\\
         {\small Coordinator. Project is canceled due to COVID-19.\\Budget: 7.200 \texteuro}
 \vspace{0.1cm} \\
-\textbf{MSGSU, Scientific Research Department} \hfill{Apr 2018 - Apr 2020}\\
+\textbf{MSGSÜ, Scientific Research Department} \hfill{Apr 2018 - Apr 2020}\\
         {\small Coordinator. Title is \textit{Flavor Evolution of Collective Evolved Neutrinos}.\\Budget: 6.000 TL}
 \vspace{0.1cm} \\
-\textbf{TUBITAK} \hfill{Oct 2018 - Apr 2019}\\
+\textbf{TÜBİTAK} \hfill{Oct 2018 - Apr 2019}\\
 	{\small Coordinator. Title is \textit{Nucleosynthesis in Core-Collapse Supernova}.\\Budget: 10.000 \texteuro}
 \vspace{0.1cm} \\
-\textbf{TUBITAK} \hfill {Sep 2015 - May 2017}\\
+\textbf{TÜBİTAK} \hfill {Sep 2015 - May 2017}\\
 	{\small Researcher. Title is \textit{Flavor Evolution of Supernova  Neutrinos and Many Body Effects}.\\Budget is 340.000 TL}
 \vspace{0.1cm} \\
-\textbf{TUBITAK} \hfill {May 2013 - May 2015}\\
+\textbf{TÜBİTAK} \hfill {May 2013 - May 2015}\\
 	{\small Researcher. Title is \textit{$\nu$-$\nu$ Interactions and Flavor Oscillations in Dense Media}.\\ Budget is 190.000 TL}
 	
 %\section{Talks}
@@ -320,7 +320,7 @@ T. Bulmus and Y. Pehlivan, (2017)  [DOI:\href{http://dx.doi.org/10.7566/JPSCP.14
 
 \section{Affiliations}
 \textbf{\href{https://www.eps.org/}{Member of European Physics Society}} (EPS)\\
-\textbf{\href{http://youngmindsistanbul.com/uyeler/}{Secretary of EPS Young Minds Istanbul Section}} (YMIstanbul)\\
+\textbf{\href{http://youngmindsistanbul.com/uyeler/}{Secretary of EPS Young Minds İstanbul Section}} (YMİstanbul)\\
 \textbf{\href{https://www.fmo.org.tr/}{Member of The Chamber of Physics Engineers}} (FMO)
 
 \section{Interests}
