--- a/taygunBulmus_CV_EN.tex
+++ b/taygunBulmus_CV_EN.tex
@@ -280,10 +280,10 @@ CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory, Astrophysi
 	{\small Coordinator. Title is \textit{Nucleosynthesis in Core-Collapse Supernova}.\\Budget: 10.000 \texteuro}
 \vspace{0.1cm} \\
 \textbf{TUBITAK} \hfill {Sep 2015 - May 2017}\\
-	{\small Researcher. Title is \textit{Flavor Evolution of Supernova  Neutrinos and Many Body Effects}.\\Budget is 340.000 TL}
+	{\small Researcher. Title is \textit{Flavor Evolution of Supernova  Neutrinos and Many Body Effects}.\\Budget: 340.000 TL}
 \vspace{0.1cm} \\
 \textbf{TUBITAK} \hfill {May 2013 - May 2015}\\
-	{\small Researcher. Title is \textit{$\nu$-$\nu$ Interactions and Flavor Oscillations in Dense Media}.\\ Budget is 190.000 TL}
+	{\small Researcher. Title is \textit{$\nu$-$\nu$ Interactions and Flavor Oscillations in Dense Media}.\\ Budget: 190.000 TL}
 	
 %\section{Talks}
 %\textbf{Supernova Neutrinos and Recent Researches}, METU, Turkey
