--- a/taygunBulmus_CV_EN.tex
+++ b/taygunBulmus_CV_EN.tex
@@ -235,38 +235,35 @@
 \section{Information}
 \newlength{\rcollength}\setlength{\rcollength}{1.95in}%
 \href{https://github.com/bulmust}{\textbf{Github:} github.com/bulmust}\hfill{\textbf{\email{bulmust@gmail.com}}}\\
-\textbf{No:} (+90) 535 416 1978\hfill{Kadıköy, İstanbul, Turkey} 
+\textbf{No:} (+90) 535 416 1978\hfill{İstanbul, Turkey} 
 
-\section{Experience}
-\textbf{Research Assistant}{\footnotesize , \href{http://www.msgsu.edu.tr/}{MSGSÜ Physics Department}, Turkey}
-\hfill{May 2017 - Present}
-\vspace{0.1cm} \\
-\textbf{Research Visitor}{\footnotesize, \href{https://www.gsi.de/en/}{GSI Theory Division}, Germany} \hfill{Oct 2018 - Apr 2019}
+\section{Professional\\Experience}
+\textbf{Research Assistant}{\footnotesize, MSGSÜ Physics Department, Turkey} \hfill{May 2017 - Present}\\
+%\vspace{0.1cm} \\
+\textbf{Research Visitor}{\footnotesize, GSI Theory Division, Germany} \hfill{Oct 2018 - Apr 2019}\\
 %Helmholtzzentrum f\"ur Schwerionenforschung
-\vspace{0.1cm} \\
-\textbf{Teaching Assistant}{\footnotesize, \href{https://msgsufizik.net/}{MSGSÜ Physics Department}, Turkey}
-\hfill{Sep 2013 - Jun 2014}
-\vspace{0.1cm} \\
-\textbf{Teacher}{\footnotesize, Nişantaşı Private Physics Teaching Institution, Turkey}
-\hfill{Sep 2011 - Jun 2012}
-\vspace{0.1cm} \\
-\textbf{Teaching Assistant}{\footnotesize, \href{http://www.fizik.itu.edu.tr/eng/}{ITU Physics Eng Department}, Turkey}
-\hfill{Sep 2008 - Jan 2010}
+%\vspace{0.1cm} \\
+\textbf{Teaching Assistant}{\footnotesize, MSGSÜ Physics Department, Turkey} \hfill{Sep 2013 - Jun 2014}\\
+%\vspace{0.1cm} \\
+\textbf{Advisor}{\footnotesize, Nişantaşı Private Physics Teaching Institution, Turkey} \hfill{Sep 2011 - Jun 2012}\\
+%\vspace{0.1cm} \\
+\textbf{Teaching Assistant}{\footnotesize, İTÜ Physics Eng. Department, Turkey} \hfill{Sep 2008 - Jan 2010}
+%\vspace{0.01cm} \\
 %\section{Interests}
 %Neutrino Astrophysics, Nucleosynthesis, Nuclear Astrophysics
 
-\section{Skils}
+\section{Skills}
 Python, Git, C\texttt{++}, SSH, SLURM, \Matlab, \LaTeX, Bash, Markdown
 
 \section{Courses}
-CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory, Astrophysics, Solid State Physics
+CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory,\\Astrophysics, Solid State Physics
 
 \section{Education}
-\textbf{Doctor of Philosophy, Physics}{, \small \href{http://www.msgsu.edu.tr/}{MSGSÜ}, Turkey}
+\textbf{Doctor of Philosophy, Physics}{\small, MSGSÜ, Turkey}
 \hfill{Jun 2022} \\
-\textbf{Master Of Science, Physics}{, \small \href{http://www.msgsu.edu.tr/}{MSGSÜ}, Turkey}
+\textbf{Master of Science, Physics}{\small, MSGSÜ, Turkey}
 \hfill{Jun 2015} \\
-\textbf{Bachelor of Science, Physics Engineering}{, \small \href{https://www.itu.edu.tr/}{ITU}, Turkey}
+\textbf{Bachelor of Science, Physics Engineering}{\small, İTÜ, Turkey}
 \hfill{Jun 2012}
 
 \section{Projects}
@@ -274,31 +271,24 @@ CCNA Introduction to Network, Neutrino Physics, Quantum Field Theory, Astrophysi
         {\small Coordinator. Project is canceled due to COVID-19.\\Budget: 7.200 \texteuro}
 \vspace{0.1cm} \\
 \textbf{MSGSÜ, Scientific Research Department} \hfill{Apr 2018 - Apr 2020}\\
-        {\small Coordinator. Title is \textit{Flavor Evolution of Collective Evolved Neutrinos}.\\Budget: 6.000 TL}
+        {\small Coordinator. \textit{Flavor Evolution of Collective Evolved Neutrinos}.\\Budget: 6.000 TL}
 \vspace{0.1cm} \\
 \textbf{TÜBİTAK} \hfill{Oct 2018 - Apr 2019}\\
-	{\small Coordinator. Title is \textit{Nucleosynthesis in Core-Collapse Supernova}.\\Budget: 10.000 \texteuro}
+	{\small Coordinator. \textit{Nucleosynthesis in Core-Collapse Supernova}.\\Budget: 10.000 \texteuro}
 \vspace{0.1cm} \\
-<<<<<<< HEAD
 \textbf{TUBITAK} \hfill {Sep 2015 - May 2017}\\
-	{\small Researcher. Title is \textit{Flavor Evolution of Supernova  Neutrinos and Many Body Effects}.\\Budget: 340.000 TL}
+	{\small Researcher. \textit{Flavor Evolution of Supernova  Neutrinos and Many Body Effects}.\\Budget: 340.000 TL}
 \vspace{0.1cm} \\
 \textbf{TUBITAK} \hfill {May 2013 - May 2015}\\
-	{\small Researcher. Title is \textit{$\nu$-$\nu$ Interactions and Flavor Oscillations in Dense Media}.\\ Budget: 190.000 TL}
-=======
-\textbf{TÜBİTAK} \hfill {Sep 2015 - May 2017}\\
-	{\small Researcher. Title is \textit{Flavor Evolution of Supernova  Neutrinos and Many Body Effects}.\\Budget is 340.000 TL}
-\vspace{0.1cm} \\
-\textbf{TÜBİTAK} \hfill {May 2013 - May 2015}\\
-	{\small Researcher. Title is \textit{$\nu$-$\nu$ Interactions and Flavor Oscillations in Dense Media}.\\ Budget is 190.000 TL}
->>>>>>> b639af046140969d1169c7466ca6660d0b08e04e
+	{\small Researcher. \textit{$\nu$-$\nu$ Interactions and Flavor Oscillations in Dense Media}.\\ Budget: 190.000 TL}
 	
 %\section{Talks}
 %\textbf{Supernova Neutrinos and Recent Researches}, METU, Turkey
 %\hfill {Feb 2015}
 
 \section{Publications}
-T. Bulmus and Y. Pehlivan, (2017)  [DOI:\href{http://dx.doi.org/10.7566/JPSCP.14.020709}{10.7566/JPSCP.14.020709}].
+T. Bulmus and Y. Pehlivan \textit{Astrophysical Neutrinos and Flavor Evolution with Self Interaction}, (2017)
+%[DOI:\href{http://dx.doi.org/10.7566/JPSCP.14.020709}{10.7566/JPSCP.14.020709}].
 
 %\section{Poster \\ Presentation}
 %\textbf{Astrophysical Neutrinos Flavor Evolution With Self Interaction},\\ Nuclei In the Cosmos XIV, Japan
@@ -320,22 +310,22 @@ T. Bulmus and Y. Pehlivan, (2017)  [DOI:\href{http://dx.doi.org/10.7566/JPSCP.14
 \href{https://bulmust.files.wordpress.com/2016/08/2016_nbia_summer_school_on_neutrino_underground_and_in_the_heavens.pdf}{\textbf{NBIA Summer School on $ \nu $'s }}{\small, Denmark}
 \hfill{Aug 2016} 
 
-\textbf{Nuclei In the Cosmos NIC-XIV}{\small,Japan}
+\textbf{Nuclei In the Cosmos NIC-XIV}{\small, Japan}
 \hfill{Jun 2016}
 
 %\textbf{International Workshop on $ \nu $ Physics and Astrophysics}{\small, Turkey }
 %\hfill{Mar 2015}
 
 \section{Affiliations}
-\textbf{\href{https://www.eps.org/}{Member of European Physics Society}} (EPS)\\
-\textbf{\href{http://youngmindsistanbul.com/uyeler/}{Secretary of EPS Young Minds İstanbul Section}} (YMİstanbul)\\
-\textbf{\href{https://www.fmo.org.tr/}{Member of The Chamber of Physics Engineers}} (FMO)
+\textbf{Member of European Physics Society} (EPS)\\
+\textbf{Secretary of EPS Young Minds İstanbul Section} (YMİstanbul)\\
+\textbf{Member of The Chamber of Physics Engineers} (FMO)
 
 \section{Interests}
 Rock Climbing, Mountaineering, Swimming, Blues and Funk Music, Home Servers
 
 \section{Language}
-Turkish (Native), English (Fluent)
+Turkish (Native), English (Working Proficiency)
 
 %\section{References}
 
