--- a/taygunBulmus_CV_EN.tex
+++ b/taygunBulmus_CV_EN.tex
@@ -240,7 +240,7 @@
 \section{Professional\\Experience}
 \textbf{Research Assistant}{\footnotesize, MSGSÜ Physics Department, Turkey} \hfill{May 2017 - Present}\\
 %\vspace{0.1cm} \\
-\textbf{Research Visitor}{\footnotesize, GSI Theory Division, Germany} \hfill{Oct 2018 - Apr 2019}\\
+\textbf{Visiting Researcher}{\footnotesize, GSI Theory Division, Germany} \hfill{Oct 2018 - Apr 2019}\\
 %Helmholtzzentrum f\"ur Schwerionenforschung
 %\vspace{0.1cm} \\
 \textbf{Teaching Assistant}{\footnotesize, MSGSÜ Physics Department, Turkey} \hfill{Sep 2013 - Jun 2014}\\
